package com.meditourism.communityRule.repository;

import com.meditourism.communityRule.entity.CommunityRuleEntity;
import org.springframework.data.jpa.repository.JpaRepository;

public interface CommunityRuleRepository extends JpaRepository<CommunityRuleEntity, Long> {
}
